--- a/src/app/comp/brackets/sigle-bracket-editor/sigle-bracket-editor.component.scss
+++ b/src/app/comp/brackets/sigle-bracket-editor/sigle-bracket-editor.component.scss
@@ -44,12 +44,12 @@ $background-gray: #F1F3F0;
     .infoCont {
         padding: 5px;
         border-radius: 5px;
-        background: rgb(255, 255, 255);
-        background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.3996192226890757) 100%);
+        background:$base-blue;
+       // background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 100%);
+
         .teamName {
             margin: 0;
-            color: #333;
-            color: #002A5C;
+            color: white;
             text-align: center;
             font-family: "nasalization", sans-serif;
             font-size: 17px;
@@ -61,6 +61,8 @@ $background-gray: #F1F3F0;
         .teamUnitName {
             font-size: 14px;
         }
+
+
     }
 
     border-radius: 15px;
@@ -77,7 +79,13 @@ $background-gray: #F1F3F0;
     margin: 5px;
 }
 
-
+.whiteB {
+    background-color: rgba(255, 255, 255, 0.45);
+    margin: 3px;
+    border-radius: 15px;
+    width: calc(100% - 6px);
+    height: calc(100% - 6px);
+}
 
 
 .teamId {
