--- a/src/app/comp/brackets/sigle-bracket-editor/sigle-bracket-editor.component.html
+++ b/src/app/comp/brackets/sigle-bracket-editor/sigle-bracket-editor.component.html
@@ -5,17 +5,20 @@
     <div cdkDropList [cdkDropListData]="unassignedUnits" class="example-list" (cdkDropListDropped)="drop($event)">
       @for (teamUnit of unassignedUnits; track $index) {
       <!-- <pre>{{teamUnit|json}}</pre> -->
-      <div class="unitCard elevation-z5  rootFlexCC" [ngStyle]="{'background-image':returnImage(teamUnit.teamUnitId)}"
+      <div class="unitCard elevation-z5 rootFlexCC" [ngStyle]="{ 'background-image': returnImage(teamUnit.teamUnitId) }"
         cdkDrag>
         <div class="whiteB rootFlexSaC">
-
           <div class="logoCont rootFlexCC">
-            <img [src]="teamUnit.teamLogoUrl|teamLogo|async">
+            <img [src]="teamUnit.teamLogoUrl | teamLogo | async" />
           </div>
           <div class="infoCont">
-            <h3 class="teamName">{{ teamUnit.teamName }}&nbsp; ( {{ teamUnit.teamAbbreviation }} )</h3>
-            <h2 class="teamName teamUnitName rootFlexSaC">{{ teamUnit.teamUnitName
-              }}<span class="rootFlexCC"><mat-icon>group</mat-icon>{{teamUnit.participantIds?.length}}</span></h2>
+            <h3 class="teamName">
+              {{ teamUnit.teamName }}&nbsp; ( {{ teamUnit.teamAbbreviation }} )
+            </h3>
+            <h2 class="teamName teamUnitName rootFlexSaC">
+              {{ teamUnit.teamUnitName
+              }}<span class="rootFlexCC"><mat-icon>group</mat-icon>{{ teamUnit.participantIds?.length }}</span>
+            </h2>
           </div>
         </div>
       </div>
@@ -26,7 +29,18 @@
   <div class="example-container">
     <h2>Brackets</h2>
     <mat-form-field appearance="outline">
-      <mat-label>Máximum bracket size {{bracketSize}}</mat-label>
+      <mat-label>Brackets</mat-label>
+      <input matInput [(ngModel)]="maxTeamsPerBracket" />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Teams</mat-label>
+      <input matInput [(ngModel)]="numberOfTeams" />
+    </mat-form-field>
+
+    <button mat-raised-button (click)="test(numberOfTeams,maxTeamsPerBracket)">Save</button>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Máximum bracket size {{ bracketSize }}</mat-label>
       <select matNativeControl required (change)="changeBrackets($event)">
         <option value="2">2 Teams</option>
         <option value="3">3 Teams</option>
@@ -43,16 +57,20 @@
     <div cdkDropList [cdkDropListData]="bracketOrder" class="example-list" (cdkDropListDropped)="drop($event)">
       @for (teamUnit of bracketOrder; track $index) {
       <!-- <pre>{{teamUnit|json}}</pre> -->
-      <div class="unitCard elevation-z5  rootFlexCC" [ngStyle]="{'background-image':returnImage(teamUnit.teamUnitId)}"
+      <div class="unitCard elevation-z5 rootFlexCC" [ngStyle]="{ 'background-image': returnImage(teamUnit.teamUnitId) }"
         cdkDrag>
         <div class="whiteB rootFlexSaC">
           <div class="logoCont rootFlexCC">
-            <img [src]="teamUnit.teamLogoUrl|teamLogo|async">
+            <img [src]="teamUnit.teamLogoUrl | teamLogo | async" />
           </div>
           <div class="infoCont">
-            <h3 class="teamName">{{ teamUnit.teamName }}&nbsp; ( {{ teamUnit.teamAbbreviation }} )</h3>
-            <h2 class="teamName teamUnitName rootFlexSaC">{{ teamUnit.teamUnitName
-              }}<span class="rootFlexCC"><mat-icon>group</mat-icon>{{teamUnit.participantIds?.length}}</span></h2>
+            <h3 class="teamName">
+              {{ teamUnit.teamName }}&nbsp; ( {{ teamUnit.teamAbbreviation }} )
+            </h3>
+            <h2 class="teamName teamUnitName rootFlexSaC">
+              {{ teamUnit.teamUnitName
+              }}<span class="rootFlexCC"><mat-icon>group</mat-icon>{{ teamUnit.participantIds?.length }}</span>
+            </h2>
           </div>
         </div>
       </div>
@@ -60,4 +78,3 @@
     </div>
   </div>
 </div>
-
