--- a/src/app/comp/brackets/sigle-bracket-editor/sigle-bracket-editor.component.scss
+++ b/src/app/comp/brackets/sigle-bracket-editor/sigle-bracket-editor.component.scss
@@ -4,12 +4,27 @@ $high-light-blue: #1b75bb;
 $base-gray: #1C1310;
 $background-gray: #F1F3F0;
 
-//Miguel's styles
+// ---------------------------    Miguel's styles
+h2,
+h3 {
+    font: 400 2.812rem / 3.25rem Nasalization, Roboto, sans-serif;
+    color: $base-blue;
+    font-size: x-large;
+    letter-spacing: 0rem;
+    margin: 0 0 .5em;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: large;
+}
+
 .unnasigned-container {
     position: fixed;
     bottom: 125px;
+    height: calc(100% - 125px - 20px);
     left: 0;
-    width: calc(100% - 20px);
+    width: 300px;
     margin: 10px;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.8);
@@ -17,49 +32,49 @@ $background-gray: #F1F3F0;
     z-index: 1000;
 
     /* Ensure it's on top of other elements */
-    h2 {
-        font: 400 2.812rem / 3.25rem Nasalization, Roboto, sans-serif;
-        color: $base-blue;
-        font-size: xx-large;
-        letter-spacing: 0rem;
-        margin: 0 0 .5em;
-        font-weight: 600;
+    .cont1 {
+        border: 1px solid $base-blue;
+        border-radius: 10px;
+margin-bottom: 10px;
+        button,
+        mat-form-field {
+            margin: 10px;
+        }
+
     }
+
 
     .unnasigned-drag {
         border-radius: 10px;
         overflow-x: scroll;
         width: calc(100% - 40px);
-        height: 105px;
+        height: calc(100% - 40px);
         margin: 10px;
         padding: 10px;
     }
 }
-.setContainer{
-    bottom: 355px;
+
+.setContainer {
+    right: 0;
+    position: fixed;
+    width: calc(100% - 300px - 40px - 5px);
+    background-color: white;
+    bottom: 125px;
     position: absolute;
     overflow-y: auto;
-    background-color: white;
-    width: 100%;
-    height: calc(100% - 355px);
-}
+    margin: 10px 5px;
+    padding: 10px;
+    border-radius: 15px;
+    height: calc(100% - 125px - 40px);
 
-.example-container {
-    width: 300px;
-    height: 120px;
-    margin: 0 25px 25px 0;
-    display: inline-block;
-    vertical-align: top;
-    border-radius: 10px;
-}
 
-.example-list {
-    border: solid 1px #ccc;
-    min-height: 60px;
-    background: white;
-    border-radius: 4px;
-    overflow: hidden;
-    display: block;
+    .brackets-container {
+        width: 100%;
+        overflow: auto;
+        gap: 20px;
+        margin-top: 20px;
+    }
+
 }
 
 .unitCard {
@@ -72,6 +87,7 @@ $background-gray: #F1F3F0;
     background-repeat: no-repeat; // Evita que la imagen se repita
     height: 100px;
     width: 250px;
+    min-width: 250px;
     margin: 5px;
 
     .logoCont {
@@ -108,12 +124,37 @@ $background-gray: #F1F3F0;
             font-weight: 600;
             line-height: normal;
         }
+
         .teamUnitName {
             font-size: 14px;
         }
     }
 
 }
+
+// ---------------------------    Miguel's styles
+
+
+
+.example-container {
+    width: 300px;
+    height: 120px;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+    vertical-align: top;
+    border-radius: 10px;
+}
+
+.example-list {
+    border: solid 1px #ccc;
+    min-height: 60px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+    display: block;
+}
+
+
 
 .whiteB {
     background-color: rgba(255, 255, 255, 0.45);
@@ -158,12 +199,6 @@ $background-gray: #F1F3F0;
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.brackets-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 20px;
-}
 
 .bracket-group {
     border: 1px solid #ccc;
